# public/swagger.json
@@ -21,7 +21,7 @@
 					"address": {
 						"type": "string"
 					},
-					"timeOffset": {
+					"timezoneOffset": {
 						"type": "number",
 						"format": "double"
 					}
@@ -31,14 +31,14 @@
 					"state",
 					"city",
 					"address",
-					"timeOffset"
+					"timezoneOffset"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
 			"UserData": {
 				"properties": {
-					"id": {
+					"_id": {
 						"type": "string"
 					},
 					"firstName": {
@@ -47,9 +47,11 @@
 					"lastName": {
 						"type": "string"
 					},
-					"birthdayAt": {
-						"type": "number",
-						"format": "double"
+					"email": {
+						"type": "string"
+					},
+					"birthdayDate": {
+						"type": "string"
 					},
 					"location": {
 						"$ref": "#/components/schemas/location"
@@ -64,22 +66,28 @@
 					}
 				},
 				"required": [
-					"id",
 					"firstName",
 					"lastName",
-					"birthdayAt",
+					"email",
+					"birthdayDate",
 					"location",
 					"createdAt"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_UserData.Exclude_keyofUserData.id-or-createdAt-or-updatedAt-or-birthdayAt__": {
+			"Pick_UserData.Exclude_keyofUserData._id-or-createdAt-or-updatedAt-or-birthdayAt__": {
 				"properties": {
 					"firstName": {
 						"type": "string"
 					},
 					"lastName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"birthdayDate": {
 						"type": "string"
 					},
 					"location": {
@@ -89,19 +97,21 @@
 				"required": [
 					"firstName",
 					"lastName",
+					"email",
+					"birthdayDate",
 					"location"
 				],
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
-			"Omit_UserData.id-or-createdAt-or-updatedAt-or-birthdayAt_": {
-				"$ref": "#/components/schemas/Pick_UserData.Exclude_keyofUserData.id-or-createdAt-or-updatedAt-or-birthdayAt__",
+			"Omit_UserData._id-or-createdAt-or-updatedAt-or-birthdayAt_": {
+				"$ref": "#/components/schemas/Pick_UserData.Exclude_keyofUserData._id-or-createdAt-or-updatedAt-or-birthdayAt__",
 				"description": "Construct a type with the properties of T except for those in type K."
 			},
 			"UserPayload": {
 				"allOf": [
 					{
-						"$ref": "#/components/schemas/Omit_UserData.id-or-createdAt-or-updatedAt-or-birthdayAt_"
+						"$ref": "#/components/schemas/Omit_UserData._id-or-createdAt-or-updatedAt-or-birthdayAt_"
 					},
 					{
 						"properties": {
@@ -129,7 +139,7 @@
 		"contact": {}
 	},
 	"paths": {
-		"/User": {
+		"/user": {
 			"post": {
 				"operationId": "Store",
 				"responses": {
@@ -164,6 +174,143 @@
 						}
 					}
 				}
+			},
+			"get": {
+				"operationId": "List",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {}
+									},
+									"required": [
+										"data"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/user/{id}": {
+			"put": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"$ref": "#/components/schemas/UserData"
+										}
+									},
+									"required": [
+										"data"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserPayload"
+							}
+						}
+					}
+				}
+			},
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"$ref": "#/components/schemas/UserData"
+										}
+									},
+									"required": [
+										"data"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
